[package]
name = "pyr"
version = "0.1.0"
authors = ["Ben Goldberg <benaagoldberg@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
hyper = "0.12.25"
futures = "0.1.21"
hyper-router = { path = "./router" }
lazy_static = "1.3.0"

[dependencies.cpython]
version = "0.2.1"
features = ["extension-module"]

[workspace]
members = [
    "router"
]